--- a/templates/deploy.yaml
+++ b/templates/deploy.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ .Values.name }}
-  {{- template "mychart.labels" }}
+  {{ include "mychart.labels" . | indent 2 }}
 spec:
   replicas: 1
   selector:
