--- a/templates/cm.yaml
+++ b/templates/cm.yaml
@@ -3,7 +3,7 @@ kind: ConfigMap
 metadata:
   name: {{ .Release.Name }}-configmap
   labels:
-{{ include "mychart.labels" . | indent 4 }}
+{{- include "mychart.labels" . | indent 4 }}
 data:
   myvalue: "Hello World"
   drink: {{ .Values.favorite.drink | default "tea" | quote }}
