--- a/templates/deploy.yaml
+++ b/templates/deploy.yaml
@@ -8,11 +8,11 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app: {{ .Values.name }}
+      {{ include "mychart.labels" . | indent 6 }}
   template:
     metadata:
       labels:
-        app: {{ .Values.name }}
+        {{ include "mychart.labels" . | indent 8 }}
     spec:
       containers:
       - name: nginx
